--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.1.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
@@ -27,6 +28,7 @@
     "@prisma/client": "^4.14.0",
     "axios": "^1.4.0",
     "fastify": "^4.17.0",
+    "js-cookie": "^3.0.5",
     "zod": "^3.21.4"
   }
 }
